# CMakeAutoDeterminGPUArch

./: CMakeLists.txt  main.cu
outputs/: Sida_Alien.txt  Sida_Colab_GPU.txt  Sida_Colab_No_GPU.txt  Sida_DeepGreen_GPU.txt  Sida_DeepGreen_No_GPU.txt  Sida_VACC.txt
